--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,17 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  margin-top: 50px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1 {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.btn {
+  margin:0 20px;
+}
+
+.oscilloscope {
+  margin-bottom: 20px;
 }
